# parlang

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GENERIC_TYPES_IMPLEMENTATION.md  LICENSE  README.md  REVIEW_SUMMARY.md  SECOND_REVIEW_SUMMARY.md  ast.dot  flake.nix
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARRAYS.md  ERROR_HANDLING.md  EXAMPLES.md  EXHAUSTIVENESS_CHECKING.md  GENERIC_TYPES.md  HIGHER_KINDED_TYPES_DESIGN.md  LANGUAGE_SPEC.md  MAP_LIBRARY.md  MODULE_AST.md  MODULE_DOT.md  MODULE_EVAL.md  MODULE_MAIN.md  MODULE_PARSER.md  MODULE_TYPECHECKER.md  MODULE_TYPES.md  RANGE.md  README.md  RECORDS.md  REFERENCES.md  SECURITY.md  STRINGS.md  SUM_TYPES.md  TEST_GUIDELINES.md  TYPE_ANNOTATIONS.md  TYPE_INFERENCE.md  TYPE_SYSTEM.md
examples/: arrays.par  conditional.par  currying.par  exhaustiveness.par  factorial.par  generic_list.par  generic_result.par  generic_tree.par  generic_types.par  math.par  pattern_matching.par  range.par  recursion.par  recursive_type_check.par  references.par  simple.par  stdlib.par  string.par  sum_types.par  tuples.par  type_alias_binary.par  type_alias_nested.par  type_alias_simple.par  type_aliases.par  type_annotations.par  use_recursion.par  use_stdlib.par  use_strings.par
src/: ast.rs  dot.rs  eval.rs  exhaustiveness.rs  lib.rs  main.rs  parser.rs  typechecker.rs  types.rs
tests/: array_tests.rs  byte_tests.rs  cli_tests.rs  error_edge_cases_tests.rs  eval_advanced_tests.rs  exhaustiveness_advanced_tests.rs  exhaustiveness_proof_tests.rs  exhaustiveness_tests.rs  float_tests.rs  generic_types_tests.rs  integration_tests.rs  (+14 more)
(+2 files in other folders)
