[package]
name = "parlang"
version = "0.2.0"
edition = "2021"
authors = ["parlang contributors"]
description = "A small ML-alike functional language written in Rust"
license = "MIT"

[dependencies]
combine = "4.6"
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"

[dev-dependencies]

[[bin]]
name = "parlang"
path = "src/main.rs"

[lib]
name = "parlang"
path = "src/lib.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[lints.clippy]
# Enforce stricter linting for better code quality
pedantic = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too strict for this project
module_name_repetitions = "allow"
must_use_candidate = "allow"
